# OOP-laba4

./: Array.cpp  Array.h  CMakeLists.txt  Figure.h  InputHelpers.h  Point.h  Polygon.cpp  Polygon.h  README.md  main.cpp
